[gd_scene load_steps=31 format=2]

[ext_resource path="res://HUD/theme.tres" type="Theme" id=1]
[ext_resource path="res://HUD/Sprites/rectangle_white.png" type="Texture" id=2]
[ext_resource path="res://HUD/VSO.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/Main Menu/Images Levels/testLevelPic.png" type="Texture" id=4]
[ext_resource path="res://HUD/Main Menu/Level Selector/PreviousButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/Main Menu/Level Selector/NextButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD/Main Menu/Level Selector/LevelSelector.gd" type="Script" id=7]
[ext_resource path="res://HUD/Main Menu/StartButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD/Main Menu/Level Selector/LevelButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://HUD/Main Menu/LoadButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://HUD/Main Menu/SaveButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://HUD/Main Menu/MenuButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://HUD/Main Menu/TitleScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]
[ext_resource path="res://Tileable2g.png" type="Texture" id=15]
[ext_resource path="res://World/Maps/PrototypeLevel.tscn" type="PackedScene" id=16]
[ext_resource path="res://World/Maps/TutorialLevel.tscn" type="PackedScene" id=17]
[ext_resource path="res://World/Maps/TestLevel.tscn" type="PackedScene" id=18]
[ext_resource path="res://World/Maps/PrototypeLevel2.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/Maps/ExteriorTest.tscn" type="PackedScene" id=20]
[ext_resource path="res://HUD/Weapons/pistol_icon.png" type="Texture" id=21]
[ext_resource path="res://HUD/Weapons/rifle_icon.png" type="Texture" id=22]
[ext_resource path="res://World/Objects/128x72.png" type="Texture" id=23]
[ext_resource path="res://World/Tiles/Floor/5sqtunnelroad 128x128.png" type="Texture" id=24]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 88 )
modulate_color = Color( 0.117647, 0.117647, 0.117647, 0.686275 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 88 )
modulate_color = Color( 1, 1, 1, 0.686275 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 88 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 88 )
modulate_color = Color( 0.117647, 0.117647, 0.117647, 0.686275 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 88 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 88 )

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 447.981 ]
}
levelsList = [ ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ) ]
levelNames = [ "Level 1", "Re loco el chabon", "Re perseguido", "333", "Mala suerte", "V", "666", "777", "Nya" ]
textures = [ ExtResource( 14 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 24 ), ExtResource( 14 ), ExtResource( 14 ) ]
PallLevels = NodePath("DiamondParent")
PlevelLabel = NodePath("PanelContainer/VBoxContainer/LevelLabel")
PPicture = NodePath("LevelPicture")
PmaxScoreL = NodePath("MaxScoreL")

[node name="LevelPicture" type="TextureRect" parent="."]
anchor_top = -0.000550003
margin_left = 271.0
margin_top = 146.33
margin_right = 646.0
margin_bottom = 392.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 261.0
margin_top = 86.0
margin_right = 650.0
margin_bottom = 124.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_right = 389.0
margin_bottom = 38.0

[node name="VSO" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 38.0

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_left = 34.0
margin_right = 117.0
margin_bottom = 38.0
text = "Level:"
align = 1

[node name="VSO2" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 121.0
margin_right = 151.0
margin_bottom = 38.0

[node name="PreviousButton" parent="." instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 76.949
margin_top = 241.83
margin_right = 241.949
margin_bottom = 281.831
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="NextButton" parent="." instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 669.505
margin_top = 247.487
margin_right = 768.505
margin_bottom = 287.487
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="NextButton2" parent="." instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 571.342
margin_top = 460.803
margin_right = 670.342
margin_bottom = 500.803
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="StartButton" parent="." instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 350.981
margin_top = 460.803
margin_right = 543.981
margin_bottom = 500.803
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="StartButton2" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = -167.048
margin_top = 463.773
margin_right = 25.9521
margin_bottom = 503.773
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "  Start Game  "

[node name="DiamondParent" type="HBoxContainer" parent="."]
margin_left = 282.0
margin_top = 408.0
margin_right = 602.0
margin_bottom = 446.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton" parent="DiamondParent" instance=ExtResource( 9 )]

[node name="LevelButton2" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 68.0

[node name="LevelButton3" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 104.0

[node name="LevelButton4" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 108.0
margin_right = 140.0

[node name="LevelButton5" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 144.0
margin_right = 176.0

[node name="LevelButton6" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 180.0
margin_right = 212.0

[node name="LevelButton7" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 216.0
margin_right = 248.0

[node name="LevelButton8" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 252.0
margin_right = 284.0

[node name="LevelButton9" parent="DiamondParent" instance=ExtResource( 9 )]
margin_left = 288.0
margin_right = 320.0

[node name="SaveButton" parent="." instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 672.434
margin_top = 163.925
margin_right = 758.434
margin_bottom = 203.925
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )

[node name="LoadButton" parent="." instance=ExtResource( 10 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 775.778
margin_top = 165.707
margin_right = 861.778
margin_bottom = 205.707
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )

[node name="MaxScoreL" type="Label" parent="."]
margin_left = 669.956
margin_top = 349.232
margin_right = 836.956
margin_bottom = 387.232
text = "Max Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 675.301
margin_top = 391.995
margin_right = 849.301
margin_bottom = 429.995
text = "Prototype2: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestButton" parent="." instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 804.287
margin_top = 245.888
margin_right = 890.287
margin_bottom = 285.888
text = "Test"

[node name="BackButton" parent="." instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 152.995
margin_top = 465.109
margin_right = 238.995
margin_bottom = 505.109
text = "Back"
transition = ExtResource( 13 )

[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="NextButton2" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StartButton2" to="." method="_on_StartButton_pressed"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton2" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton3" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton4" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton5" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton6" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton7" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton8" to="." method="_on_diamond_chosen"]
[connection signal="diamondChosen" from="DiamondParent/LevelButton9" to="." method="_on_diamond_chosen"]
[connection signal="pressed" from="SaveButton" to="SaveButton" method="save_game"]
[connection signal="pressed" from="LoadButton" to="LoadButton" method="load_game"]
[connection signal="pressed" from="TestButton" to="." method="test"]
